fixed line spacing for paragraphs

--- a/themes/custom/pco_cities_bootstrap/sass/_globalStyles.scss
+++ b/themes/custom/pco_cities_bootstrap/sass/_globalStyles.scss
@@ -52,7 +52,6 @@ main {
     color           : $black;
     font-size       : 1.75rem;
     font-weight     : normal;
-    line-height     : 3rem;
     padding-bottom   : 4rem;
 
     @include desktop {
