--- a/themes/custom/pco_cities_bootstrap/sass/layouts/_challengePagesLayout.scss
+++ b/themes/custom/pco_cities_bootstrap/sass/layouts/_challengePagesLayout.scss
@@ -188,13 +188,13 @@
 
     p {
       font-size: 0.95em;
-
+      line-height: 1em;
     }
 
     p.lead {
       font-size: 1.15em;
       font-weight: 500;
-      line-height: 1.45em
+      line-height: 1.45em;
     }
   }
 
